# SaplingEngine

./: .clangd  .gitignore  CMakeLists.txt  README.md  SaplingEngine.aseprite  oldCMakeLists.txt  todo.txt
Examples/: TemplateComponent.hpp  TemplateSystem.hpp
GameContent/Assets/: complete tileset.tsx  kalevala.tiled-session  map.csv  map.tmx  map1.csv  map1.tmx
GameContent/Assets/Sprites/: bubble_projectile.aseprite  debug.aseprite  obstacle.aseprite  player.aseprite  test.aseprite
GameContent/Assets/Sprites/aseprite/: fern_1.aseprite  forestspirit.aseprite  forestspirit_attack.aseprite  hiisi.aseprite  nostalgic-dreams.gpl  player_1.0.aseprite  player_idle.aseprite  player_run.aseprite  test.aseprite  tileset_all.aseprite  tileset_forest.aseprite  tileset_mountain.aseprite  tileset_plains.aseprite  tileset_plan.aseprite  tileset_swamp.aseprite  tree_dark.aseprite  weapon_basic.aseprite
GameContent/Components/: GameComponents.hpp  TemplateComponent.hpp  cBrain.hpp  cBubble.hpp  cCoyoteTime.hpp  cDamage.hpp  cEnemyMovement.hpp  cEnemySpawner.hpp  cGravity.hpp  cHealth.hpp  cLifetime.hpp  cLowestY.hpp  cMap.hpp  cMapData.hpp  cMathAnim.hpp  cMoves.hpp  cPickup.hpp  cPickupHandler.hpp  cPlayerController.hpp  cRotate.hpp  cWeapon.hpp
GameContent/Prefabs/: GamePrefabs.hpp  bubbleprojectile.cpp  bubbleprojectile.hpp  enemy.cpp  enemy.hpp  map.cpp  map.hpp  player.cpp  player.hpp  weapon.cpp  weapon.hpp
GameContent/Scenes/: PrototypeScene.cpp  PrototypeScene.hpp  TestScene.cpp  TestScene.hpp
GameContent/Systems/: GameSystems.hpp  TemplateSystem.hpp  sBubbleVelDecay.hpp  sDebugDrawTransforms.hpp  sEnemyAI.hpp  sEnemySpawner.hpp  sFoliageSpawner.hpp  sGravity.hpp  sLifetime.hpp  sMathAnim.hpp  sMove.hpp  sPlayerController.cpp  sPlayerController.hpp  sRotate.hpp  sTiledCSVMap.hpp  sWeaponUse.hpp
SaplingEngine/: SaplingEngine.hpp  main.cpp
SaplingEngine/Audio/: AudioEngine.cpp  AudioEngine.hpp
SaplingEngine/Core/: AssetManager.cpp  AssetManager.hpp  AudioEngine.cpp  AudioEngine.hpp  Color.hpp  Debug.hpp  Engine.cpp  Engine.hpp  EngineTemplates.hpp  Input.cpp  Input.hpp  Scene.cpp  Scene.hpp  SceneMessage.hpp
SaplingEngine/Core/Canopy/: Scene.cpp  Scene.hpp
SaplingEngine/Core/Input/: Input.cpp  Input.hpp
SaplingEngine/Core/Seedbank/: AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp
SaplingEngine/ECS/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityManagerT.hpp
SaplingEngine/ECS/Components/: Component.cpp  Component.hpp
SaplingEngine/ECS/Entities/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityManagerT.hpp
SaplingEngine/Physics/: Math.cpp  Math.hpp  Physics.cpp  Physics.hpp  SpatialGrid.hpp
SaplingEngine/Renderer/: Font.cpp  Font.hpp  Sprout.cpp  Sprout.hpp  Sprout.mm  SproutMetal.mm  StandaloneTexture.cpp  StandaloneTexture.hpp  Texture.cpp  Texture.hpp  Window.cpp  quad.glsl  quad.h  quadw.h
SaplingEngine/Utility/: Debug.hpp  Physics.cpp  Physics.hpp  SpatialGrid.hpp
